--- a/index.html
+++ b/index.html
@@ -21,9 +21,18 @@
 	<footer>
 
 	<div class="mapa">
-		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d8434.7541265222!2d-58.43431809379682!3d-34.60678720244964!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcca688994eb61%3A0xd055df0a7dafa86e!2sParque+Centenario!5e0!3m2!1ses-419!2sar!4v1521211989160" width="600" height="400" frameborder="0" style="border:0" allowfullscreen>
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d8434.7541265222!2d-58.43431809379682!3d-34.60678720244964!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcca688994eb61%3A0xd055df0a7dafa86e!2sParque+Centenario!5e0!3m2!1ses-419!2sar!4v1521211989160" width="600" height="300" frameborder="0" style="border:0" allowfullscreen>
 		</iframe>
 	</div>	
+
+	<div class="redes">
+		<H2>Encontranos en las Redes</H2>
+		<a href="https://www.facebook.com/pages/Parque-Centenario/303956963413908?ref=br_rs" target="_blank"><img class="icon" src="img/icon/facebook.svg" alt="facebook"> </a>
+		<a href="https://twitter.com/elanfidelparque" target="_blank"> <img class="icon" src="img/icon/twitter.svg" alt="twitter"> </a>
+		<a href="https://www.tripadvisor.com.ar/Attraction_Review-g312741-d1569880-Reviews-Parque_Centenario-Buenos_Aires_Capital_Federal_District.html" target="_blank"> <img class="icon" src="img/icon/tripadvisor.svg" alt="tripadvisor"> </a>
+		<a href="https://www.instagram.com/explore/locations/303956963413908/parque-centenario/?hl=es-la" target="_blank"> <img class="icon" src="img/icon/instagram.svg" alt="instagram"> </a>
+		<a href="http://www.buenosaires.gob.ar/ciudadverde/espaciosverdes/parque-centenario" target="_blank"><img class="icon" src="img/icon/ba.png" alt="BA"> </a>
+	</div>
 
 </footer>
 	
