--- a/galeria.html
+++ b/galeria.html
@@ -12,6 +12,7 @@
 		<header>
 			<h1>GALERIA</h1>
 			<nav class="letraGris">
+
 				<a href="index.html">Home |</a>
 				<a href="actividades.html">Actividades |</a>
 				<a href="galeria.html">Galeria</a>
@@ -19,62 +20,84 @@
 		</header>
 		<body>
 			<section class="fila">
+				<span>Actividades al Aire Libre</span><br/>
+				
+				<figure class="foto">
+					<img class="orientacion" src="img/ImgGallery/ICOejerGrupal.jpg">
+					<figcaption class="descripcion">expresion corporal</figcaption>
+				</figure>
+				<figure class="foto">
+					<img class="orientacion" src="img/ImgGallery/ICOyoga.jpg">
+					<figcaption class="descripcion" >ejercicios a la orilla del lago</figcaption>
+				</figure>
+				<figure class="foto">
+					<img class="orientacion" src="img/ImgGallery/ICOparqueBanco.jpg">
+					<figcaption class="descripcion">caminatas</figcaption>
+				</figure>
+				<figure class="foto">
+					<img class="orientacionRight" src="img/ImgGallery/ICOmirandoBici.jpg">
+					<figcaption class="descripcion">ciclismo y descanso</figcaption>
+				</figure>
+			</section>
+
+			<section class="fila">
+				<span>Contacto con la naturaleza</span><br/>
 				<section class="foto">
-					<img src="">
+					<img class="orientacion" src="img/ImgGallery/ICOpindoPalmera.jpg">
+					<figcaption>Palmeras Pindo</figcaption>
 				</section>
 				<section class="foto">
-					<img src="">
+					<img class="orientacion" src="img/ImgGallery/ICOfloresAurora.jpg">
+					<figcaption>Flores y Aurora. E.Peynot</figcaption>
 				</section>
 				<section class="foto">
-					<img src="">
+					<img class="orientacion" src="img/ImgGallery/ICOrainbow.jpg">
+					<figcaption>Arcoiris por Chorros de agua</figcaption>
 				</section>
 				<section class="foto">
-					<img src="">
+					<img class="orientacionRight" src="img/ImgGallery/ICOalimentandoPalomas.jpg">
+					<figcaption>Fauna del lugar</figcaption>
 				</section>
 			</section>
 
 			<section class="fila">
+				<span>Arte y Cultura</span><br/>
 				<section class="foto">
-					<img src="">
+					<img class="orientacion" src="img/ImgGallery/ICOvictoriaAlada.jpg">
+					<figcaption>Victoria Alada. ERubino</figcaption>
 				</section>
 				<section class="foto">
-					<img src="">
+					<img class="orientacion" src="img/ImgGallery/ICOguau.jpg">
+					<figcaption>Mural con personajes</figcaption>
 				</section>
 				<section class="foto">
-					<img src="">
+					<img class="orientacion" src="img/ImgGallery/ICOalimentandoPalomas2.jpg">
+					<figcaption>Lago con peces KOI y patos</figcaption>
 				</section>
 				<section class="foto">
-					<img src="">
-				</section>
-			</section>
-
-			<section class="fila">
-				<section class="foto">
-					<img src="">
-				</section>
-				<section class="foto">
-					<img src="">
-				</section>
-				<section class="foto">
-					<img src="">
-				</section>
-				<section class="foto">
-					<img src="">
+					<img class="orientacionRight" src="img/ImgGallery/ICOfuente.jpg">
+					<figcaption>Parque obra del arquitecto Carlos Thays </figcaption>
 				</section>
 			</section>
+					
 
 			<section class="fila">
+				<span>Social e Infantil</span><br/>
 				<section class="foto">
-					<img src="">					
+					<img class="orientacion" src="img/ImgGallery/ICOestacionSaludable.jpg">
+					<figcaption>Informacion</figcaption>					
 				</section>
 				<section class="foto">
-					<img src="">					
+					<img class="orientacion" src="img/ImgGallery/ICOrayuela.jpg">
+					<figcaption>Juegos clasicos de vereda</figcaption>					
 				</section>
 				<section class="foto">
-					<img src="">					
+					<img class="orientacion" src="img/ImgGallery/ICOcarrusel.jpg">
+					<figcaption>Bello Carrusel</figcaption>					
 				</section>
 				<section class="foto">
-					<img src="">					
+					<img class="orientacionRight" src="img/ImgGallery/ICOjuegosArbol.jpg">
+					<figcaption>Juegos infantiles</figcaption>					
 				</section>
 			</section>
 			
