--- a/index.html
+++ b/index.html
@@ -17,6 +17,18 @@
 				<a href="galeria.html">Galeria</a>
 			</nav>
 		</header>
+		<div class="parrafo">
+			<h2>Hístoria</h2>
+			<br /> 	<br /> 
+			<p>Su inauguración estaba prevista para 1910, pero se retrasó 10 años. Con el tiempo, incorporó nuevos atractivos pero también sufrió el deterioro producido por la falta de mantenimiento. Hoy, después de mucho trabajo, es uno de los parques más populares de la ciudad.<br /> <br />  Originalmente, el Parque del Centenario fue pensado, como su nombre indica, para festejar el centenario de la Revolución de Mayo. El proyecto fue presentado durante la intendencia de Adolfo Bullrich, entre 1898 y 1902. Sin embargo, recién se encargó la compra de terrenos, propiedad de la familia Piñero, en 1908.
+
+			La realización del Parque Central del Centenario (como se lo pretendía llamar entonces) fue autorizada al año siguiente. Su diseño y parquización estuvieron a cargo de Carlos Thays, quien entonces se desempeñaba como Director de Paseos de la Ciudad y había realizado importantes trabajos en los espacios verdes de Buenos Aires, como las reformas en el Parque 3 de febrero.
+
+			Como el proyecto no llegó a ser concluido para el 25 de mayo de 1910, fecha del centenario de la Revolución, los trabajos continuaron por etapas y recién concluyeron en 1920, siete años después de que Thays abandonase la Dirección de Paseos de la Ciudad.
+
+			Se dice que el diseño circular del parque se debe a que Thays se inspiró en el escudo nacional; los bulevares que rodean al círculo principal representarían a los laureles del escudo.
+			</p>
+			</div>
 	</section>
 	<footer>
 
