puesta en comun para revisar responsive

--- a/galeria.html
+++ b/galeria.html
@@ -8,19 +8,19 @@
     <link href="https://fonts.googleapis.com/css?family=Bree+Serif" rel="stylesheet">
 </head>
 <body>
-	<section id="mainContainer">
+	<section id="mainContainer" >
 		<header>
 			<h1>GALERIA</h1>
-			<nav class="letraGris">
+			<nav>
 
 				<a href="index.html">Home |</a>
 				<a href="actividades.html">Actividades |</a>
 				<a href="galeria.html">Galeria</a>
 			</nav>
 		</header>
-		<body>
+		<div class="content">
 			<section class="fila">
-				<span>Actividades al Aire Libre</span><br/>
+				<div class="titulo">Actividades al Aire Libre</div>
 				
 				<figure class="foto">
 					<img class="orientacion" src="img/ImgGallery/ICOejerGrupal.jpg">
@@ -41,7 +41,7 @@
 			</section>
 
 			<section class="fila">
-				<span>Contacto con la naturaleza</span><br/>
+				<div class="titulo">Contacto con la naturaleza</div>
 				<section class="foto">
 					<img class="orientacion" src="img/ImgGallery/ICOpindoPalmera.jpg">
 					<figcaption>Palmeras Pindo</figcaption>
@@ -61,9 +61,9 @@
 			</section>
 
 			<section class="fila">
-				<span>Arte y Cultura</span><br/>
+				<div class="titulo">Arte y Cultura</div>
 				<section class="foto">
-					<img class="orientacion" src="img/ImgGallery/ICOvictoriaAlada.jpg">
+					<img class="orientacion" src="img/ImgGallery/ICOvictoriaAlada2.jpg">
 					<figcaption>Victoria Alada. ERubino</figcaption>
 				</section>
 				<section class="foto">
@@ -78,11 +78,10 @@
 					<img class="orientacionRight" src="img/ImgGallery/ICOfuente.jpg">
 					<figcaption>Parque obra del arquitecto Carlos Thays </figcaption>
 				</section>
-			</section>
-					
+			</section>					
 
 			<section class="fila">
-				<span>Social e Infantil</span><br/>
+				<div class="titulo">Social e Infantil</div>
 				<section class="foto">
 					<img class="orientacion" src="img/ImgGallery/ICOestacionSaludable.jpg">
 					<figcaption>Informacion</figcaption>					
@@ -101,9 +100,28 @@
 				</section>
 			</section>
 			
-		</body>
-	
+		
+		</div>
 	</section>
+
+	<div class="clearfix"></div>
+	   <footer>
+
+	    <div class="mapa">
+		    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d8434.7541265222!2d-58.43431809379682!3d-34.60678720244964!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcca688994eb61%3A0xd055df0a7dafa86e!2sParque+Centenario!5e0!3m2!1ses-419!2sar!4v1521211989160" width="400" height="200" frameborder="0" style="border:0" allowfullscreen>
+		    </iframe>
+	    </div>	
+
+	    <div class="redes">
+		    <H2>Encontranos en las Redes</H2>
+	 	    <a href="https://www.facebook.com/pages/Parque-Centenario/303956963413908?ref=br_rs" target="_blank"><img class="icon" src="img/icon/facebook.svg" alt="facebook"> </a>
+		    <a href="https://twitter.com/elanfidelparque" target="_blank"> <img class="icon" src="img/icon/twitter.svg" alt="twitter"> </a>
+		    <a href="https://www.tripadvisor.com.ar/Attraction_Review-g312741-d1569880-Reviews-Parque_Centenario-Buenos_Aires_Capital_Federal_District.html" target="_blank"> <img class="icon" src="img/icon/tripadvisor.svg" alt="tripadvisor"> </a>
+		    <a href="https://www.instagram.com/explore/locations/303956963413908/parque-centenario/?hl=es-la" target="_blank"> <img class="icon" src="img/icon/instagram.svg" alt="instagram"> </a>
+		    <a href="http://www.buenosaires.gob.ar/ciudadverde/espaciosverdes/parque-centenario" target="_blank"><img class="icon" src="img/icon/ba.png" alt="BA"> </a>
+	    </div>
+  
+      </footer>  
 
 </body>
 </html>
