--- a/actividades.html
+++ b/actividades.html
@@ -7,27 +7,53 @@
     <link rel="stylesheet" type="text/css" href="css/estilos.css">
     <link href="https://fonts.googleapis.com/css?family=Bree+Serif" rel="stylesheet">
 </head>
-<body>
-	<section id="mainContainer">
+<body class="act2">
+	<section id="PrincipalContainer" class="OficialBackground">
 		<header>
-			<h1>ACTIVIDADES</h1>
-			<nav class="letraGris">
+			<h1> ACTIVIDADES</h1>
+			<nav>
 				<a href="index.html">Home |</a>
-				<a href="">Actividades |</a>
+				<a href="actividades.html">Actividades |</a>
 				<a href="galeria.html">Galeria</a>
 			</nav>
+			     <p class="act"> El Parque Centenario cuenta con diferentes actividades para que puedas disfrutar de los espacios verdes de la cuidad en familia, desde juegos para los más pequeños, hasta un campo deportivo para ejercitarse y una estación saludable, para que puedas informarte sobre tu estado físico.
+			     También contamos con un anfiteatro situado en el corazón del parque, el Anfiteatro Eva Perón es uno de los espacios públicos más prestigiosos de la Ciudad de Buenos Aires. </p>
+                    <div class="actividades">
+                    	<img src="img/img/20180316_105615.jpg" class="caja1">
+                   	    <img src="img/img/yoga1.jpeg" class="caja2">
+                   	    <img src="img/img/20180316_111211.jpg" class="caja3">
+                   	    <img src="img/img/juegos1.jpeg" class="caja4">
+                   	    <img src="img/img/salud1.jpeg" class="caja5">
+                   	    <img src="img/img/salud2.jpeg" class="caja6">
+                   	    <img src="img/img/descanso.jpeg" class="caja7">
+                   	    <img src="img/img/descanso2.jpeg" class="caja8">
+                   	    <img src="img/img/anfiteatro1.jpg" class="caja9">
+                   	    <img src="img/img/anfiteatro2.jpg" class="caja10">
+                   	    <img src="img/img/anfiteatro3.jpg" class="caja11">
+                   	    <img src="img/img/anfiteatro4.jpg" class="caja12">
+                   	</div>  
+
 		</header>
-		<body>
-			<section class="fila">
-				<section class="foto">
-					
-				</section>
-				
-			</section>
-			
-		</body>
-	
 	</section>
 
+	<div class="clearfix"></div>
+	   <footer>
+
+	    <div class="mapa">
+		    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d8434.7541265222!2d-58.43431809379682!3d-34.60678720244964!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcca688994eb61%3A0xd055df0a7dafa86e!2sParque+Centenario!5e0!3m2!1ses-419!2sar!4v1521211989160" width="400" height="200" frameborder="0" style="border:0" allowfullscreen>
+		    </iframe>
+	    </div>	
+
+	    <div class="redes">
+		    <H2>Encontranos en las Redes</H2>
+	 	    <a href="https://www.facebook.com/pages/Parque-Centenario/303956963413908?ref=br_rs" target="_blank"><img class="icon" src="img/icon/facebook.svg" alt="facebook"> </a>
+		    <a href="https://twitter.com/elanfidelparque" target="_blank"> <img class="icon" src="img/icon/twitter.svg" alt="twitter"> </a>
+		    <a href="https://www.tripadvisor.com.ar/Attraction_Review-g312741-d1569880-Reviews-Parque_Centenario-Buenos_Aires_Capital_Federal_District.html" target="_blank"> <img class="icon" src="img/icon/tripadvisor.svg" alt="tripadvisor"> </a>
+		    <a href="https://www.instagram.com/explore/locations/303956963413908/parque-centenario/?hl=es-la" target="_blank"> <img class="icon" src="img/icon/instagram.svg" alt="instagram"> </a>
+		    <a href="http://www.buenosaires.gob.ar/ciudadverde/espaciosverdes/parque-centenario" target="_blank"><img class="icon" src="img/icon/ba.png" alt="BA"> </a>
+	    </div>
+  
+      </footer>  
+	
 </body>
 </html>
