--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>
-		
-	</title>
-    <link rel="stylesheet" type="text/css" href="css/estilos.css">
+	<title>Parque </title>
     <link href="https://fonts.googleapis.com/css?family=Bree+Serif" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+     <link rel="stylesheet" type="text/css" href="css/estilos.css">
+
 </head>
 <body>
 	<section id="mainContainer" class="conBackground">
@@ -18,7 +18,7 @@
 			</nav>
 		</header>
 		<div class="parrafo">
-			<h2>Hístoria</h2>
+			<h2>Historia</h2>
 			<br /> 	<br /> 
 			<p>Su inauguración estaba prevista para 1910, pero se retrasó 10 años. Con el tiempo, incorporó nuevos atractivos pero también sufrió el deterioro producido por la falta de mantenimiento. Hoy, después de mucho trabajo, es uno de los parques más populares de la ciudad.<br /> <br />  Originalmente, el Parque del Centenario fue pensado, como su nombre indica, para festejar el centenario de la Revolución de Mayo. El proyecto fue presentado durante la intendencia de Adolfo Bullrich, entre 1898 y 1902. Sin embargo, recién se encargó la compra de terrenos, propiedad de la familia Piñero, en 1908.
 
