--- a/galeria.html
+++ b/galeria.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>
-		
-	</title>
-    <link rel="stylesheet" type="text/css" href="css/estilos.css">
+	<title>Parque </title>
     <link href="https://fonts.googleapis.com/css?family=Bree+Serif" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+     <link rel="stylesheet" type="text/css" href="css/estilos.css">
 </head>
 <body>
 	<section id="mainContainer" >
